<resources>
    <string name="app_name">InfraProject - App</string>
    <string name="txt_ip">Adresse IP</string>
    <string name="txt_port">Port</string>
    <string name="txt_connection_action">Connexion</string>
    <string name="txt_connection_status">Statut : %1$s</string>
    <string name="txt_connected_true">Connected</string>
    <string name="txt_connected_false">Disconnected</string>

    <string name="txt_message_send">Envoyer un message</string>

    <string name="txt_sensor_generic">Valeur : %1.2f</string>
    <string name="txt_sensor_temperature">Température : %1.2f</string>
    <string name="txt_sensor_humidity">Humidité : %1.2f</string>
    <string name="txt_sensor_luminosity">Luminosité : %1.2f</string>
    <string name="txt_sensor_datetime">-- (%1$s) --</string>

</resources>
