<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Network Connection -->

    <LinearLayout
        android:id="@+id/ll_input_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_ip"
            android:hint="@string/txt_ip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            />

        <EditText
            android:id="@+id/et_port"
            android:hint="@string/txt_port"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_connection_action"
        android:text="@string/txt_connection_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_input_network"
        />

    <TextView
        android:id="@+id/tv_connection_status"
        android:text="@string/txt_connection_status"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_connection_action"
        />

    <!-- Sensor Display -->

    <LinearLayout
        android:id="@+id/ll_sensor_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_connection_status"
        android:layout_marginTop="30dp">

        <Spinner
            android:id="@+id/spn_sensor_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </Spinner>

        <TextView
            android:id="@+id/tv_sensor_one"
            android:text="@string/txt_sensor_generic"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sensor_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_sensor_one"
        android:layout_marginTop="20dp">

        <Spinner
            android:id="@+id/spn_sensor_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </Spinner>

        <TextView
            android:id="@+id/tv_sensor_two"
            android:text="@string/txt_sensor_generic"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sensor_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_sensor_two"
        android:layout_marginTop="20dp">

        <Spinner
            android:id="@+id/spn_sensor_three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </Spinner>

        <TextView
            android:id="@+id/tv_sensor_three"
            android:text="@string/txt_sensor_generic"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_sensor_datetime"
        android:text="@string/txt_sensor_datetime"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_sensor_three"
        android:layout_marginTop="20dp"/>

    <!--
    <TextView
        android:id="@+id/tv_received"
        android:text="@string/txt_received"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"/>
     -->
    <Button
        android:id="@+id/btn_message_send"
        android:text="@string/txt_message_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>